<resources>
    <string name="app_name">SkyDroid</string>
    <string name="phone_number_hint">Enter your phone number</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_hint">LOG IN</string>
    <string name="forgot_pwd_hint">Forgot Password?</string>
    <string name="registration_hint">Register Yourself</string>
    <string name="preference_file">SkyDroid Preferences</string>
</resources>