<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f0f4c3"
    tools:context=".NewActivity">

    <ImageView
        android:id="@+id/imgHome"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@drawable/home_surya"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/tvNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imgHome"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="30dp"
        android:hint="@string/phone_number_hint"
        android:inputType="phone"
        android:maxLength="10"
        android:maxLines="1"
        android:padding="8dp"
        tools:ignore="TextViewEdits" />

    <EditText
        android:id="@+id/tvPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvNumber"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="10dp"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="8dp"
        tools:ignore="TextViewEdits" />

    <Button
        android:id="@+id/btnLogIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvPwd"
        android:layout_marginHorizontal="80dp"
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:text="@string/login_hint"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgotPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnLogIn"
        android:text="@string/forgot_pwd_hint"
        android:textSize="15sp"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:textColor="#2196f3"
        android:padding="6dp"/>

    <TextView
        android:id="@+id/tvRegistration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/registration_hint"
        android:textSize="15sp"
        android:layout_marginBottom="15dp"
        android:layout_centerHorizontal="true"
        android:textColor="#2196f3"
        android:padding="6dp"/>

</RelativeLayout>